# testnet-faucet-tool

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  cli.py  pyproject.toml
.github/workflows/: codeql.yml  security.yml
config/: alerts.yaml.example  chains.yaml  wallets.yaml.example
core/: alerting.py  logger.py  monitor.py  rate_limiter.py  registry.py  reporter.py  retry.py
docs/: blockchain-primer.md  walkthrough.md
docs/plans/: FaucetFrameworkPlan.md  PlanCorrectImplementTestnetFaucetTool.md  TUI-for-Testnet-Faucet-Tool.md
handlers/: algorand.py  aptos.py  avalanche.py  base.py  bittensor.py  canton.py  cardano.py  cosmos.py  eos.py  evm.py  flow.py  hedera.py  icp.py  near.py  solana.py  stacks.py  stellar.py  substrate.py  sui.py  tezos.py  ton.py  tron.py  utxo.py  vechain.py  xrp.py  zcash.py
tests/: conftest.py  test_alerting.py  test_algorand.py  test_aptos.py  test_avalanche.py  test_base_handler.py  test_batch.py  test_bittensor.py  test_canton.py  test_cardano.py  test_check_command.py  test_cli.py  test_cosmos.py  test_cosmos_integration.py  test_dashboard.py  test_eos.py  test_evm.py  test_evm_integration.py  test_flow.py  test_hedera.py  test_history.py  test_icp.py  test_logger.py  test_monitor.py  test_near.py  test_phase4_integration.py  test_phase5_integration.py  test_phase6_integration.py  test_phase7_integration.py  test_rate_limiter.py  test_refill.py  test_registry.py  test_retry.py  test_solana.py  test_solana_integration.py  test_stacks.py  test_stellar.py  test_substrate.py  test_sui.py  test_tezos.py  (+13 more)
tui/: app.py  data.py
(+10 files in other folders)
