[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bitgo-faucet"
version = "0.1.0"
description = "BitGo testnet faucet tool"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "rich>=13.0",
]

[project.optional-dependencies]
evm = ["web3>=6.0", "eth-account>=0.11", "eth-utils>=3.0"]
solana = ["solana>=0.34", "solders>=0.21"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.scripts]
faucet = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["core*", "handlers*", "config*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
